--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-<h2>UNIX Overview</h2>
+<h1>UNIX 개요</h1>
 <ul>
-  <li>First OS developed in C language (1973).</li>
-  <li>Created by Ken Thompson and Dennis Ritchie at AT&T Bell Labs (1969).</li>
-  <li>Major versions: BSD, System V.</li>
-  <li><strong>Linux</strong>: UNIX-like open-source OS by Linus Torvalds (1991).</li>
-  <li><strong>Features</strong>: Interactive, multi-user, multitasking, portable, hierarchical file system.</li>
-  <li><strong>Structure</strong>:
+  <li>최초로 C 언어로 개발된 운영체제 (1973).</li>
+  <li>AT&T 벨 연구소에서 Ken Thompson과 Dennis Ritchie가 개발 (1969).</li>
+  <li>주요 버전: BSD, System V.</li>
+  <li><strong>Linux</strong>: Linus Torvalds가 개발한 UNIX 유사 오픈소스 운영체제 (1991).</li>
+  <li><strong>특징</strong>: 대화형, 다중 사용자, 다중 작업 지원, 높은 이식성, 계층적 파일 시스템 구조.</li>
+  <li><strong>구조</strong>:
     <ul>
-      <li><strong>Kernel</strong>: Manages resources and processes.</li>
-      <li><strong>Shell</strong>: User interface for commands.</li>
-      <li><strong>Utilities</strong>: Development and editing tools.</li>
+      <li><strong>커널(Kernel)</strong>: 자원 및 프로세스 관리.</li>
+      <li><strong>셸(Shell)</strong>: 사용자 명령어 인터페이스 제공.</li>
+      <li><strong>유틸리티(Utilities)</strong>: 개발 및 편집 도구.</li>
     </ul>
   </li>
 </ul>
 
-<h2>UNIX System Access & Commands</h2>
+<h1>UNIX 시스템 접속 및 명령어</h1>
 <ul>
-  <li><strong>Access</strong>: Connect via SSH (<code>ssh userID@serverIP</code>) and password.</li>
-  <li><strong>Basic Editing</strong>:
+  <li><strong>접속</strong>: SSH(<code>ssh 사용자ID@서버IP</code>)와 비밀번호를 이용해 접속.</li>
+  <li><strong>기본 편집</strong>:
     <ul>
-      <li>Backspace: delete character</li>
-      <li>Ctrl+W: delete word</li>
-      <li>Ctrl+U: delete line</li>
+      <li>Backspace: 문자 삭제</li>
+      <li>Ctrl+W: 단어 삭제</li>
+      <li>Ctrl+U: 줄 전체 삭제</li>
     </ul>
   </li>
-  <li><strong>Command Format</strong>: <code>command [options] [arguments]</code> (e.g., <code>ls -l /tmp</code>)</li>
-  <li><strong>Useful Commands</strong>: <code>banner</code>, <code>date</code>, <code>clear</code>, <code>man</code></li>
-  <li><strong>Change Password</strong>: <code>passwd</code></li>
-  <li><strong>Logout</strong>: <code>logout</code>, <code>exit</code>, or <code>Ctrl+D</code></li>
+  <li><strong>명령어 형식</strong>: <code>명령어 [옵션] [인자]</code> (예: <code>ls -l /tmp</code>)</li>
+  <li><strong>자주 사용하는 명령어</strong>: <code>banner</code>, <code>date</code>, <code>clear</code>, <code>man</code></li>
+  <li><strong>비밀번호 변경</strong>: <code>passwd</code></li>
+  <li><strong>로그아웃</strong>: <code>logout</code>, <code>exit</code> 또는 <code>Ctrl+D</code></li>
 </ul>
