--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UNIX 개요 및 기본 명령어</title>
+  <title>Chapter 01. UNIX 개요 및 기본 명령어</title>
   <style>
     body {
       font-family: Arial, sans-serif;
